<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titlerules"
        android:textColor="#ff7f27"
        android:textSize="40sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.254" />

    <TextView
        android:id="@+id/explication1"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:gravity="center"
        android:text="@string/explication1"
        android:textColor="#fff"
        android:paddingTop="2dp"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/explication2"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:gravity="center"
        android:text="@string/explication2"
        android:textColor="#fff"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/explication1"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/explication1"
        app:layout_constraintTop_toBottomOf="@+id/explication1" />

    <TextView
        android:id="@+id/explication3"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:gravity="center"
        android:text="@string/explication3"
        android:textColor="#fff"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/explication2"
        app:layout_constraintStart_toStartOf="@+id/explication2"
        app:layout_constraintTop_toBottomOf="@+id/explication2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explication4"
        android:textColor="#fff"
        android:textSize="19sp"
        android:padding="5dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/explication3"
        app:layout_constraintStart_toStartOf="@+id/explication3"
        app:layout_constraintTop_toBottomOf="@+id/explication3" />
</androidx.constraintlayout.widget.ConstraintLayout>